# tutorclaw-mcp

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
content/chapters/: 01-variables.md  02-conditionals.md  03-loops.md  04-functions.md  05-files.md
content/exercises/: 01-exercises.json  02-exercises.json  03-exercises.json  04-exercises.json  05-exercises.json
src/tutorclaw/: __init__.py  __main__.py  server.py  store.py  webhook.py
src/tutorclaw/tools/: assessment.py  billing.py  content.py  execution.py  guidance.py  learners.py
tests/: conftest.py  test_assess_response.py  test_check_tier.py  test_code_tools.py  test_content_tools.py  test_generate_guidance.py  test_get_chapter_content.py  test_get_exercises.py  test_get_learner_state.py  test_get_upgrade_url.py  test_integration.py  test_monetization_tools.py  test_payment_flow.py  test_pedagogy_tools.py  test_register_learner.py  test_state_tools.py  test_submit_code.py  test_update_progress.py  test_webhook.py
