[project]
name = "tutorclaw"
version = "0.1.0"
description = "MCP server for TutorClaw — an AI-powered tutoring system that teaches programming through PRIMM-Lite pedagogy, adaptive learning, and tiered content access."
readme = "README.md"
authors = [
    { name = "mohsinsheikhani", email = "imohsinsheikhani@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.27.0",
]

[project.scripts]
tutorclaw = "tutorclaw:main"

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
